# Parallels

./: .gitignore  README.md
lab1_cmake/: CMakeLists.txt  build_cmake.sh  main.cpp
lab2/1/: Makefile  main.c
lab2/2/: Makefile  integral.c
lab2/3/1/: Makefile  simpleIter_1.cpp
lab2/3/2/: Makefile  simpleIter_2.cpp
lab3/1/: Makefile  task1.cpp
lab3/2/: Makefile  task2.cpp
lab4/: sensor.py
lab5/: flask_cli.py  flask_server.py  main.py
lab6/CPU/: Makefile  main.cpp
lab6/GPU/: Makefile  main.cpp
lab7+8/CUBLAS/: Makefile  main.cpp
lab7+8/CUDA/: Makefile  main.cu  test.cu
lab_1_make/: Makefile
